[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
# serde = { version = "1.0", features = ["derive"] }
# serde-big-array = "0.5.1"
# bincode = "1.3.3"
# rkyv = { version = "0.7", features = ["validation"] }
byteorder = "1.5.0"

[profile.release]
codegen-units = 1
lto = "fat"
