[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# lazy_static = "1.4.0"
proxy = { path = "../proxy" }

[profile.release]
codegen-units = 1
lto = "fat"
